# refprop-rs

./: .example.env  .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md
converter/: Cargo.toml
converter/src/: lib.rs
examples/: demo.rs  mixture.rs  simple.rs
refprop/: Cargo.toml
refprop-sys/: Cargo.toml
refprop-sys/src/: lib.rs
refprop/examples/: demo.rs  mixture.rs
refprop/src/: error.rs  fluid.rs  lib.rs  properties.rs
refprop/src/backend/: mod.rs  refprop.rs
src/: converter.rs  error.rs  fluid.rs  lib.rs  properties.rs  sys.rs
src/backend/: refprop.rs
tests/: critical_point.rs  flash_calculations.rs  fluid_info.rs  mixture.rs  pure_fluid.rs  saturation.rs  unit_systems.rs
