[package]
name = "refprop-sys"
version = "0.1.0"
edition = "2024"
description = "Low-level FFI bindings for NIST REFPROP (dynamic loading via libloading)"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/refprop-rs"
readme = "../README.md"
keywords = ["refprop", "ffi", "thermodynamics", "nist"]
categories = ["external-ffi-bindings"]

[dependencies]
libloading = "0.9.0"
